package com.designpattern.structural.adapter;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/13 16:42
 * @Description:
 */
public interface MediaPlayer {
    void play(String audioType, String fileName);
}
